Fixed quotes bug.

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <i class="weather-icon owf"></i>
         <span class="temperature"></span>
         <span class="humidity"></span>
-        <span class="wind"></span>
+        <div class="wind"></div>
         <div class="weather-description"></div>
         <div id="city" contenteditable="true"></div>
     </section>
